--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,4 +9,5 @@
     --background-comand: #f5f4fa;
     --active-button: #188ce8;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --duration: 250ms;
   }
