--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,19 +13,35 @@
    }}
     
    .modal {
-    position: absolute;
-    top: 50%;
+    position: relative;
     left: 50%;
-    transform: translate(-50%, -50%);
-    padding:40px;
-    width: 528px;
-    min-height: 581px;
-    background-color: var(--mainbackground);
+    top: 90px;
+     background-color: var(--mainbackground);
     border-radius: 4px;
-  
+    padding:40px;
     transition: translate(-50%, -50%) scale(1);
     transition: transform 250ms var(--timing-function);
-   }
+    max-width: 450px;
+    width: 100%;
+
+
+    @media screen and (min-width:480px) {
+      transform: translateX(-50%);
+ }
+
+ @media screen and (min-width:768px) {
+  
+ }
+
+ @media screen and (min-width:1200px) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  width: 528px;
+  min-height: 581px;
+ }}
   
    .backdrop.is-hidden .modal {
     transform: translate(-50%,-50%) scaleY(0);
@@ -56,12 +72,15 @@
   .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: calc(23 / 20);
+  line-height: calc(30 / 20);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-color);
   margin-bottom: 12px;
-  }
+
+  @media screen and (min-width:1200px) {
+    line-height: calc(23 / 20);
+  }}
   
   .modal-input{
     width: 100%;
@@ -171,5 +190,13 @@
   background-position: center;
   border:none;
   }
+
+  .modal-mailing-label{
+    @media screen and (max-width:1199px) {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.03em;
+  }}
  
   .terms{ margin-left: 7px;}
