--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -1,18 +1,23 @@
-.our-work{display:none;}
+.our-work{
+  @media screen and (max-width:1199px) {display:none;}}
 
-@media screen and (min-width:1200px) {
   .our-work {
+    @media screen and (min-width:1200px) {
     padding-bottom: 138px;
-   padding-top: 94px;}
+   padding-top: 94px;}}
    .container .work {
+    @media screen and (min-width:1200px) {
     display: flex;
-    }
+    }}
     .work-item {
+      @media screen and (min-width:1200px) {
       width: calc((100% - 60px) / 3);
-    }
+      }}
+
     .work-item + .work-item {
+      @media screen and (min-width:1200px) {
       margin-left: 30px;
-    }
+    }}
     
     .image-box {position: relative;}
     
@@ -27,6 +32,6 @@
       color: var(--lighttxt-color);
       text-align: center;
     }
-}    
+  
 
     
