--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,119 +1,240 @@
-
-.icon-tel, .icon-envelope {
-  display: none;
-}
-
-.menu-button{
-  display: inline-flex;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-
-  &:hover,
-  &:focus{
-    fill:var(--link-color)
+.navigation .container {
+    display: flex;
+    align-items: center;
   }
-}
 
-.menu-button .icon-cross {
-  display: none;
-}
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;}
+  }
 
-.menu-button.is-open .icon-cross {
-display: block;
-}
-.menu-button.is-open .icon-menu {
-  display: none;
+  .header__menu {
+
+    display: flex;
+    z-index: 1;
+  
+    @media screen and (min-width: 768px) {
+      // margin-left: 88px;
+    }
+  }
+  
+  .menu-button{
+    display: flex;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+  
+    @media screen and (min-width: 768px) {
+      display: none;}
+  
+    &:hover,
+    &:focus{
+      fill:var(--link-color)
+    }
   }
 
   .mobile-menu{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: var(--mainbackground);
-    top: 0;
-    left: 0;
-    right: 0;
-    padding-left: 40px;
-  }
+    display: flex;
 
-  .btn-close__menu {
-    display:block;
-    margin-top: 10px;
-    margin-left: auto;
-    cursor: pointer;
-    
-    border: none;
-    background-color: transparent;
+   @media screen and (max-width: 767px) {
+     flex-direction: column;
+     transform: translateY(-100%);
+     visibility: hidden;
+     opacity: 0;
   
-  &:hover,
-&:focus{fill:var(--link-color)}}
-
-.site-nav__link{
-  font-weight: 500;
-  font-size: 40px;
-  line-height: calc(47 / 40);
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: var(--text-color);
-  text-decoration: none;
-
-  &:hover,
-  &:focus{
-    color: var(--link-color);
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 95vh;
+  
+     padding: 48px 40px;
+  
+     background-color: var(--mainbackground);
+  
+     transition: transform var(--duration) var(--timing-function),
+       opacity var(--duration) var(--timing-function),
+       visibility var(--duration) var(--timing-function);
+  
+     &.is-open {
+       transform: translateY(0);
+       visibility: visible;
+       opacity: 1;
+     }
+  
+     @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }}
   }
-}
+  
+  .menu-button .icon-cross {
+    display: none;
+  
+    .menu-button.is-open & {
+      display: block;
+    }
+  }
 
-.site-nav__unit{ margin-bottom: 32px;
-}
-.current-page {
-   color: var(--link-color);}
+  .icon-menu {
+    .menu-button.is-open & {
+      display: none;
+    }
+  }
+  
+  
+ .main-nav {
+    display: flex;
+    justify-content:flex-start;
+  }
+  
+  .contact__unit:not(:last-child) {
+    margin-right: 40px;
+  }
+  
 
+.first-unit {
+  @media  screen and (min-width: 1200px) {
+  margin-left: 93px;
+  }}
+  
+.site-nav {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  }
+  
+.site-nav__unit {position: relative;}
 
+  .site-nav__link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  background-color: var(--link-color);
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity 250ms var(--timing-function);
+  }
+  .site-nav__link:hover::after,
+  .site-nav__link:focus::after {
+  opacity: 1;
+  }
+  
+.current-page::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    background-color:var(--link-color);
+    height: 4px;
+    width: 100%;
+    border-radius: 2px;
+    opacity:1 ;
+  }
+  
 .contact {
-  margin-bottom: auto;
-}
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+  
+  .navigation .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-family: roboto, sans-serif;
+    font-weight: 500;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.02em;
+    
+    list-style: none;
+    text-decoration: none;
+    transition: color 250ms var(--timing-function);
 
-.contact__unit {   }
-.contact__unit:not(:last-child){
-  margin-bottom: 32px;
-  margin-top: 300px;
-}
+    &:hover,
+    &:focus {
+      color: var(--link-color);
+      transition: color 250ms var(--timing-function);
+    }
+  }
 
-.contact__tel {
-font-weight: 500;
-font-size: 34px;
-line-height: calc(40 / 34);
-letter-spacing: 0.02em;
-color: var(--link-color);
-margin-top: 32px;
-text-decoration: none;
-}
+  .site-nav__link {color: var(--text-color);}
+  
+ .current-page {
+    color: var(--link-color);
+    @media  screen and (min-width: 1200px) {
+      &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: block;
+      border-bottom: 4px solid #2196F3;
+      width: 100%;
+      border-radius: 2px;}
+  }}
 
-.contact__mail {
-font-weight: 500;
-font-size: 24px;
-line-height: calc(28 / 24);
-letter-spacing: 0.02em;
-color: var(--maintxt-color);
-text-decoration: none;
-}
+  
+  .contact__mail,
+  .contact__tel {
+    color: var(--maintxt-color);
+    transition: color 250ms var(--timing-function);
+  }
+  
+  .icon-envelope {
+    @media screen and (max-width:1199px) {
+      display: none;
+    }
+    @media  screen and (min-width: 1200px) {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+    fill: currentColor;}}
+  
+  .icon-tel {
+    @media screen and (max-width:1199px) {
+      display: none;
+    }
+    @media  screen and (min-width: 1200px) {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+    fill: currentColor;}}
+  
+  .contact__unit {
+    color: var(--maintxt-color);
+    display: flex;
+    justify-items: center;
+    }
 
-.nav-soc {display: flex;
-  margin-top: 64px;
-}
-.nav-soc__item {
-  padding: 0 10px;
-  list-style: none;
-  &:not(:last-child){
-    border-right: 1px solid rgba(33, 33, 33, 0.2);}
-}
-.nav-soc__link {
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: calc(22 / 18);
-  letter-spacing: 0.02em;
-  color: var(--link-color);
-}
+    .nav-soc {display: flex;
+      margin-top: 64px;
+      @media screen and (min-width: 768px) {display: none;}
+    }
+    .nav-soc__item {
+      padding: 0 10px;
+      list-style: none;
+      &:not(:last-child){
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+     }
+    }
+    .nav-soc__link {
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: calc(22 / 18);
+      letter-spacing: 0.02em;
+      color: var(--link-color);
+    }
