--- a/sass/components/_people.scss
+++ b/sass/components/_people.scss
@@ -14,6 +14,7 @@
     border-radius: 0px 0px 4px 4px;
     margin-left: 30px;
     margin-bottom: 30px;
+    width: 100%;
 
     @media screen and (min-width: 768px) {
       width: calc((100% - 60px) / 2); }
