--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -10,14 +10,28 @@
   
   .sorting {
     display: flex;
-    justify-content: center;
     margin-bottom: 50px;
     gap: 8px;
+
+    @media screen and (min-width:480px) {
+     width: 340px;
+     flex-wrap: wrap; 
+    }
+  
+    @media screen and (min-width:768px) {
+     
+    }
+  
+    @media screen and (min-width:1200px) {
+      justify-content: center;
+    }
+
   }
 
   .sorting__button {
     border-radius: 4px;
     padding: 6px 22px;
+    margin-bottom: 15px;
     border-color: transparent;
     background-color: var(--background-comand);
     cursor: pointer;
@@ -96,6 +110,7 @@
   .projects {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
   
   .projects-box {
@@ -111,15 +126,20 @@
   }
   
   .projects .item {
+    width: 100%;
+
+    @media screen and (min-width:1200px) {
     flex-basis: calc((100% - 60px) / 3); 
-    margin-right: 30px;
+    margin-right: 30px;}
   }
   .projects .item:nth-child(3n) {
-    margin-right: 0;
+    @media screen and (min-width:1200px) {
+    margin-right: 0;}
   }
   
   .projects .item:not(:nth-last-child(3)) {
-    margin-bottom: 30px;
+    @media screen and (min-width:1200px) {
+    margin-bottom: 30px;}
   }
   
   .projects p {
