--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,10 +11,7 @@
 @import './utils/mixins';
 @import './components/logo';
 @import './components/underline';
-// @import './components/page-header';
-@import './components/header/button';
-@import './components/header/social-links';
-@import './components/header/modal-menu';
+@import './components/page-header';
 @import './components/bunner';
 @import './components/benefits';
 @import './components/our-work';
@@ -23,4 +20,5 @@
 @import './components/footer';
 @import './components/portfolio';
 @import './components/modal';
+@import'./components/mobile-menu';
    
