--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,40 +1,35 @@
-.benefits {padding-top: 60px;
-  padding-bottom: 60px;
+.benefits {
 
-
-
-  @include desktop {
-    padding-top: 94px;
-  padding-bottom: 0 px;
-  }
-}
-  .benefit-container {
+@media screen and (min-width: 1200px) {padding-top: 94px;
+  padding-bottom: 0;
+}}
+  .benefit__list {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 30px;
-  }
   
-  .benefits .unit {
-    
-    @media screen and (min-width:480px) {
-      width: 100%;
-    }
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }    }
+  
+  .benefit__unit {
+    width: 100%;
 
-    @media screen and (min-width:768px) {
-      flex-basis: calc((100% - 30px) / 2);
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
     }
-
-    @media screen and (min-width:1200px) {
-      flex-basis: calc((100% - 90px) / 4);
-    }
-  }
+  
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 90px) / 4);
+    }}
   
   .title-benefits {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: var(--text-color);
   }
   
-  .benefit-item {
+  .benefit__item {
     display: flex;
     content: "";
     height: 120px;
@@ -45,7 +40,7 @@
     justify-content: center;
   }
   
-  .benefit-icon {
+  .benefit__icon {
     width: 70px;
     height: 70px;
   }
