--- a/sass/components/_bunner.scss
+++ b/sass/components/_bunner.scss
@@ -5,80 +5,90 @@ footer {
 }
 
 .bunner{
-max-width: 1600px;
-height: 400px;
 margin-left: auto;
 margin-right: auto;
+padding-top: 118px;
+padding-bottom: 118px;
+height: 400px;
 border: 1px dashed black;
-background-image: linear-gradient( rgba(47, 48, 58, 0.4),
-rgba(47, 48, 58, 0.4)), 
-url(../images/header_mob_1x.jpg);
-@include retina{
-  background-image: linear-gradient( rgba(47, 48, 58, 0.4),
-rgba(47, 48, 58, 0.4)), 
-url(../images/header_mob_2x.jpg);
-}
-
 background-repeat: no-repeat;
 background-position: center;
 background-size:cover ;
 text-align: center;
-padding-top: 118px;
-padding-bottom: 118px;
+background-image: linear-gradient( rgba(47, 48, 58, 0.4),
+rgba(47, 48, 58, 0.4)), 
+url(/images/bunner_mobile.jpg);
+
+@include retina {
+  background-image: linear-gradient( rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), 
+  url(/images/bunner_mobile@2x.jpg);
+
+
+@media screen and (min-width:480px) {
+  background-image: linear-gradient( rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), 
+  url(/images/bunner_mobile.jpg);
+  
+  @include retina {
+    background-image: linear-gradient( rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)), 
+    url(/images/bunner_mobile@2x.jpg);
+  }}
+
 
 @media screen and (min-width:768px) {
-  padding-top: 118px;
-  padding-bottom: 118px;
-  height: 400px;
   background-image: linear-gradient( rgba(47, 48, 58, 0.4),
-rgba(47, 48, 58, 0.4)), 
-url(../images/header_tablet_1x.jpg);
-
-@include retina{
-  background-image: linear-gradient( rgba(47, 48, 58, 0.4),
-rgba(47, 48, 58, 0.4)), 
-url(../images/header_tablet_2x.jpg);
-}
+  rgba(47, 48, 58, 0.4)), 
+  url(/images/bunner_tablet.jpg);
+  
+  @include retina {
+    background-image: linear-gradient( rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)), 
+    url(/images/bunner_tablet@2x.jpg);
+  }}
 }
 
 @media screen and (min-width:1200px) {
+  max-width: 1600px;
+  height: 600px;
   padding-top: 200px;
   padding-bottom: 200px;
-  height: 600px;
   background-image: linear-gradient( rgba(47, 48, 58, 0.4),
 rgba(47, 48, 58, 0.4)), 
-url(../images/header_desktop_1x.jpg);
+url(../images/bunner.jpg);
 
-@include retina{
+@include retina {
   background-image: linear-gradient( rgba(47, 48, 58, 0.4),
-rgba(47, 48, 58, 0.4)), 
-url(../images/header_desktop_2x.jpg);
-}
+  rgba(47, 48, 58, 0.4)), 
+  url(/images/bunner_desktop@2x.jpg);
+}}
 }
 
-& .button {
-  padding: 10px 32px;
-}
-&-title {
+
+.bunner-title {
   text-align: center;
   font-weight: 900;
-
-  margin-bottom: 30px;
+  text-transform: uppercase;
   font-size: 26px;
   line-height: calc(42 / 26);
-  
-  @media screen and (min-width:768px) {
-    font-size: 26px;
-    line-height: calc(42 / 26);
-  }
-  
+  letter-spacing: 0.06em;
+  margin-bottom: 30px;
+
   @media screen and (min-width:1200px) {
     font-size: 44px;
-    line-height: calc(66 / 44);
+    line-height: calc(66 / 44); 
+}  }
+  
+  .bunner .button {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: calc(30 / 16);
+      align-items: center;
+      padding: 10px 24px;
+  
+    @media screen and (min-width:768px) {}
+    @media screen and (min-width:1200px) {
+      padding: 10px 32px;
   }
-}
-}
-
-
-
-
+  }
