--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,21 +1,20 @@
 .clients__list {
+  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 50px;
+  }
 }
 
 .clients__items {
-  @media screen and (min-width:480px) {
-    flex-basis: calc((100% - 30px) / 2);
-  }
-
-  @media screen and (min-width:768px) {
-    flex-basis: calc((100% - 60px) / 3);
-  }
-
-  @media screen and (min-width:1200px) {
-    flex-basis: calc((100% - 150px) / 6);
-  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 60px) / 3);}
+  @media screen and (min-width: 1200px) {
+  flex-basis: calc((100% - 150px) / 6);}
 }
   
 .clients__link {
