--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,6 +10,19 @@ footer {
   }
   }
 
+  .footer-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width:1200px) {
+    justify-content: space-between;
+    display: flex;
+    align-items: baseline;
+  }
+  }
+
   .footer-article {
     margin-bottom: 9px;
     font-style: normal;
@@ -46,13 +59,11 @@ footer {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
-  margin-top: 60px;
   }
   
   .our-soc__list {
     display: flex;
     gap: 10px;
-    justify-content: center;
   }
   .our-soc__items {
     width: 44px;
@@ -75,51 +86,42 @@ footer {
      transition: background-color 250ms var(--timing-function);
     }
   }
-   
-   .footer-colums {
-    @media screen and (min-width:1200px){ 
-      display: flex;
-  justify-content: space-between;}}
 
    .first-colum {
-    @media screen and (min-width:1200px) {margin-right: 70px;}}
-   .second-colum {
-    @media screen and (min-width:768px) {margin-top: 0;
-    padding-top: 0;}
-    @media screen and (min-width:1200px) {margin-right: 93px;}}
-   .third-colum{
-    @media screen and (min-width:480px) {
-        }
-   
-    @media screen and (min-width:1200px) {margin-left:auto;}}
-  .footer__tablet {
-    @media screen and (min-width:768px) {
-    display: flex;
-    justify-content: space-around;
-  
-  }}
-   .footer-container {
     text-align: center;
-
-    @media screen and (min-width:480px) {
-      text-align: center;
-    }
-  
-    @media screen and (min-width:768px) {
-     
-    }
+    @media screen and (min-width:1200px) {
+      margin-right: 70px;}}
+   .second-colum {
+    text-align: center;
+    margin-top: 60px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-top: 0;
+    margin-left: 165px;}
+    @media screen and (min-width:1200px) {
+      margin-right: 93px;
+    margin-top: 0;}}
+   .third-colum{
+    text-align: center;
+    margin-top: 60px;
   
     @media screen and (min-width:1200px) {
-      display: flex;
-    align-items: baseline;
-    }
-   }
+   
+      margin-left:auto;
+    margin-top: 0;}}
+
+    .footer__tablet {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        justify-content: space-around;
+      }
+      @media screen and (min-width: 768px) {
+        display: flex;
+      }}
+  
   
    .your-mail {
     height: 50px;
-    width: 450px;
-    margin-right: 15px;
-    margin-bottom: 20px;
+    max-width: 450px;
+    margin-right: 12px;
     padding: 15px 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: #2F303A;
@@ -131,8 +133,12 @@ footer {
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 
-    @media  screen and (min-width: 1200px) {
-      width: 358px;
+    @media screen and (min-width:480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width:1200px) {
+      width: 358px; 
     }
 
     &:focus-within{
@@ -143,37 +149,28 @@ footer {
      }
    }
     
-   .join-mail {
-    
-    @media screen and (min-width:480px) {
-         display: flex;
-         flex-wrap: wrap;
-        justify-content: center;
-    }
+   .join-mail {display: flex;
+flex-wrap: wrap;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+width: 480px;}
+  @media screen and (min-width:1200px) {
+    flex-wrap: nowrap;
+  }
+}
   
-    @media screen and (min-width:768px) {
-     
-    }
-  
-    @media screen and (min-width:1200px) {
-      display: flex;
-      flex-wrap: nowrap;
-    }}
-
-    .form__label{
-      @media screen and (min-width:480px) {
-        width: 100%;
-   }
-    }
-    
    .button-footer { 
     padding-left: 28px;
     padding-right: 28px;
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
+
+    @media screen and (max-width:1199px) {
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
     }
+   }
   
   .icon-send {
     fill: currentColor;
