--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -1,23 +1,21 @@
-.our-work{
-  @media screen and (max-width:1199px) {display:none;}}
+.our-work {
+  display: none;
+  padding-top: 0;
 
-  .our-work {
-    @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
+    display: block;
     padding-bottom: 138px;
-   padding-top: 94px;}}
-   .container .work {
-    @media screen and (min-width:1200px) {
-    display: flex;
-    }}
+    padding-top: 94px;}}
+    
+    .container .work {
+      display: flex;
+    }
     .work-item {
-      @media screen and (min-width:1200px) {
       width: calc((100% - 60px) / 3);
-      }}
-
+    }
     .work-item + .work-item {
-      @media screen and (min-width:1200px) {
       margin-left: 30px;
-    }}
+    }
     
     .image-box {position: relative;}
     
@@ -32,6 +30,4 @@
       color: var(--lighttxt-color);
       text-align: center;
     }
-  
-
     
