--- a/sass/components/_people.scss
+++ b/sass/components/_people.scss
@@ -2,25 +2,31 @@
     background-color: var(--background-comand);
   }
 .people__list {
+     gap: 30px;
     display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
+    flex-direction: column;
+    @media screen and (min-width:768px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
 
 .people__items {
+    width: 100%;
     background: var(--mainbackground);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    margin-left: 30px;
-    margin-bottom: 30px;
+
+    @media screen and (min-width:768px) {
+      width: calc((100% - 30px) / 2);  
+    }
+    @media screen and (min-width:1200px) {
+      width: calc((100% - 90px) / 4); 
+    }
+  }
+
+  .people__image {
     width: 100%;
-
-    @media screen and (min-width: 768px) {
-      width: calc((100% - 60px) / 2); }
-
-    @media screen and (min-width: 1200px) {
-      width: calc((100% - 120px) / 4);}
   }
 
 .people__name {
