--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,3 @@
-.mobile-menu {
-}
-
 .menu-toggle { 
     min-height: 40px;
     min-width: 40px;
@@ -31,6 +28,11 @@
   justify-content: space-between;
   width: 100vw;
   height: 100vh;
+
+  
+  @media screen and (min-width:768px) {
+    display: none;
+  }
 }
 .mobile-nav {
     
@@ -56,7 +58,7 @@
     transition: color 250ms var(---timing-function);}
 
 }
-.current-page {color: var(--link-color);
+.active-page {color: var(--link-color);
 }
 .mob-contact {
     
